# Main-Computer-and-Sensors

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
GUI/include/: CMakeLists.txt  ConditionsBox.h
GUI/src/: CMakeLists.txt  ConditionsGroup.cpp  SingleCondition.cpp  ThenWidgetsLayout.cpp  Window.cpp
MainComputer/: CMakeLists.txt
MainComputer/GUI/include/: CMakeLists.txt  ConditionLayoutBase.h  ConditionWidgetsLayout.h  ConditionsBox.h  ConditionsGroup.h  SingleCondition.h  ThenWidgetsLayout.h  Window.h
MainComputer/GUI/src/: CMakeLists.txt  ConditionsBox.cpp  ConditionsGroup.cpp  SingleCondition.cpp  Window.cpp
MainComputer/include/: AndCondition.h  BinaryTreeBuilder.h  CMakeLists.txt  CompositeCondition.h  ConditionBase.h  ConditionWidgetsLayout.h  ConditionsBox.h  ConditionsGroup.h  ConditionsGroupBox.h  IfWidgetsLayout.h  OrCondition.h  SimpleCondition.h  ThenGroupBox.h  Window.h
MainComputer/resources/: CMakeLists.txt
MainComputer/src/: AndCondition.cpp  BinaryTreeBuilder.cpp  CMakeLists.txt  CompositeCondition.cpp  ConditionWidgetsLayout.cpp  ConditionsGroupBox.cpp  IfGroupBox.cpp  IfWidgetsLayout.cpp  OrCondition.cpp  SimpleCondition.cpp  ThenGroupBox.cpp  Window.cpp  conditionsManager.cpp  main.cpp
MainComputer/tests/: CMakeLists.txt  test_and_condition.cpp
VehicleCompSim/: VehicleCompSim.vcxproj
include/: AndCondition.h  ConditionBase.h  ConditionsManager.h  IfGroupBox.h  SimpleCondition.h  Window.h  conditionsManager.h
src/: AndCondition.cpp  CMakeLists.txt  CompositeCondition.cpp  ConditionsManager.cpp  SimpleCondition.cpp
tests/: test_and_condition.cpp
